--- a/0x01-react_intro/task_1/dashboard/src/App.css
+++ b/0x01-react_intro/task_1/dashboard/src/App.css
@@ -33,8 +33,12 @@ body {
 	border-bottom: 2px solid red;
 	min-height: 40vh;
   }
-  .App-body p {
+  .App-body p, input, button, label {
 	margin: 1rem;
+  }
+
+  .App-body input, button {
+	height: min-content;
   }
 
 .App-link {
