--- a/0x01-react_intro/task_1/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_1/dashboard/src/Notifications.css
@@ -2,3 +2,11 @@
 	border: 1px solid green;
 	padding: 1em;
 }
+
+[data-priority="default"] {
+	color: blue;
+}
+
+[data-priority="urgent"] {
+	color: red;
+}
